# RecoFacial

./: .gitignore  CMakeLists.txt  README.md  big_variacion_alfa_pca.txt  big_variacion_kknn.txt  big_variacion_kknn_pca.txt  plotFiles.py  variacion_alfa_pca.txt  variacion_kknn.txt  variacion_kknn_pca.txt
informe/: apendices.tex  conclusiones.tex  desarrollo.tex  discusion.tex  experimentacion.tex  informe.tex  introduccion.tex  resultados.tex
ppmloader/: ppmloader.h
src/: imagen.cpp  imagen.h  kfold.cpp  kfold.h  knn.cpp  knn.h  main.cpp  main_kfold.cpp  mainmarce.cpp  misc.h  pca.cpp  pca.h
tests/: testBig.in  testCristian.in  testFullBig.in  testFullRed.in  testRed.in
